# template-app

./: .gitignore  CMakeLists.txt  sdkconfig.old
main/: CMakeLists.txt  RegsMap.c  main.c  main.h
main/ADC/: myadc.c  myadc.h
main/AlphaBettaFilt/: calman.c  calman.h
main/BaseProtocol/: BaseProtocol.c  BaseProtocol.h
main/CRC_polinoms/: crcPolinoms.c  crcPolinoms.h
main/Usart/: usart.c  usart.h
main/Wifi/: wifi.c  wifi.h
main/mqtt/: mqttClient.c  mqttClient.h
